--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KG5X353F');</script>
+    <!-- End Google Tag Manager -->
+  
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8NX4D3Q0PQ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8NX4D3Q0PQ');
+    </script>
+
+    <meta name="facebook-domain-verification" content="p2ek633u8nvgsdj7mlgazjcblu3upn" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -11,11 +31,44 @@
   <link rel="icon" href="public/outros/LOGO-MAKALOA.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Makaloa</title>
+
+  <!-- Meta Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '3605077949762334');
+    fbq('track', 'PageView');
+    </script>
+<!-- End Meta Pixel Code -->
+
 </head>
 
 <body>
+
+  <body id="body" data-spy="scroll" data-target=".header" class="page-on-scroll">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KG5X353F"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
   <div id="root"></div>
   <script type="module" src="./main.jsx"></script>
 </body>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js" type="text/javascript"></script>
+
+<script src="./js/main.js"></script>
+
+<script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/03683be9-ea95-4d1c-9f6c-76fa04aad267-loader.js" ></script>
 
 </html>
